--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "core-js": "^3.4.2",
+    "gh-pages": "^4.0.0",
     "gulp": "^4.0.2",
     "gulp-gh-pages": "^0.5.4",
     "webpack": "^5.72.0",
